--- a/public/user_app/assets/css/style.css
+++ b/public/user_app/assets/css/style.css
@@ -8,7 +8,7 @@
 }
 
 /* #preloader {
-    background: url(../img/logo.png) no-repeat center center;
+    background: url(../img/main_logo.png) no-repeat center center;
     background-size: 200px;
     width: 100%;
     height: 100vh;
